@@ -29,8 +29,9 @@ package com.pi4j.io.file;
 
 import com.pi4j.util.NativeLibraryLoader;
 
-import sun.misc.Cleaner;
-import sun.misc.SharedSecrets;
+// TODO :: REMOVE JDK INTERNAL REFS
+import jdk.internal.misc.SharedSecrets;
+import jdk.internal.ref.Cleaner;
 
 import java.io.FileDescriptor;
 import java.io.FileNotFoundException;
